--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Change Management Coordinator
 •	Sustained operating procedures for 50+ teams through Governance of Change Management process, managing resistance to the process, effectively identified and managed compliance issues.
 •	Interlocked with squads on various projects, co-evolving in complex environments, delivering quantifiable results, saving the organization $1,000,000-$3,000,000 in annual costs.   
 •	Undertook role of Change Management expert for 4-5 internal audits a year, exceeding auditor’s expectations and competently providing evidence of ethical policy compliance.
-•	Co-Authored 75+ page Change Management policies & procedures, standardizing process for IBM’s Cloud platform, improving quality and productivity.  
+•	Co-Authored 75+ page Change Management policies and procedures, standardizing process for IBM’s Cloud platform, improving quality and productivity.  
 •	Achieved a 98-99% success rate for thousands of changes each month, producing beyond expectations, with a team of 13 Change Coordinators across four countries.  
 
 Lowe’s Home Improvement, Phoenix, AZ                                                       Dec 2012-Jun 2013
