--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   </div>
 <div id="content-professional">
   <div id="content-profesionalheader">
-    Professional Experience
+          <h2>Professional Experience</h2>
   </div>
   
   <div id="content-ibm corporation">
