--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   
                   <div id="content-summary">
                           <h1>Profile</h1>
-                          <p>I am a Change Management professional with over four years experience moving individuals from where they currently are to where the business needs them to be. Highly skilled in taking technical information and making it sensible for teams to easily comprehend, while enhancing team performance. Project management experience with the readiness to work collaboratively and produce quantitative results. Strengths in resistance management, IT Governance, audit compliance, document control, problem-solving and trouble-shooting. Able to meet, exceed aggressive targets/deadlines.</p>
+                          <p>I am a Change Management professional with over four years experience guiding individuals from where they currently are to where the business needs them to be. Highly skilled in taking technical information and making it sensible for teams to easily comprehend, while enhancing team performance. Project management experience with the readiness to work collaboratively and produce quantitative results. Strengths in resistance management, IT Governance, audit compliance, document control, problem-solving and trouble-shooting. Able to meet, exceed aggressive targets/deadlines.</p>
                   </div>
 <div id="content-professional">
   <div id="content-profesionalheader">
