--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
   <div id="content-ibm corporation">
     <h3>IBM Corporation, Phoenix, AZ</h3>
-          <p>An entrepreneurial real estate appraisal company serving Southern California.</p>
+          <p>A Fortune 100 IT company that provides hardware, software and services offerings.</p>
     <div class="block-date">
       <h4>June 2013 - September 2017</h4>
       <h2>Change Management Coordinator</h2>
